# Radio-Flux-Solver

./: .gitignore  LOFAR_flux_cal.py  LOFAR_flux_cal_catalog.py  README.md  SPX-MK-LOF.ipynb  calibration_flux_dependance_solver.py  catalog_manager.py  catalogs_transform.py  fits_overlap_grabber.py  fits_reconvolver.py  flux_cal_dependance_solver.py  flux_calibrator.py  flux_calibrator_cli.py  flux_solver_synthetic.py  functions.py  install.py  match_catalog_2D_testsuite.py  meerkat_plotter.py  pyproject.toml
catalogs/meerkat/: README.txt
catalogs/snrs/: SNRcat20260213-SNR.csv
catalogs/vlssr/: legend.txt
data/: snrs.data.html
scripts/: download_smgps.sh  download_vlssr.sh
scripts/smgps_mfs/: listing.xml  urls.txt
unused/: match_catalog_2D_testsuite.py  unused_functions.py
