[project]
name = "Radio-Flux-Solver"
version = "1.0.0"
description = "Code to calibrate a given radio catalog or image file to known reference catalogs, using source matching and spectral index analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.2.0",
    "bdsf>=1.13.0.post2",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3,<2.5",
    "plotext>=5.3.2",
    "reproject>=0.19.0",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "termcolor>=3.3.0",
    "tqdm>=4.67.3",
]

[tool.ty.rules]
unresolved-attribute = "ignore"
unresolved-import = "ignore"

[tool.ruff.lint]
ignore = ["E701","E702","E722"]
